# Machine-Learning-in-Robotics

./: README.md
2D_SLAM/: README.md
2D_SLAM/data/Train/MapUtils/pybind_cpp/: CMakeLists.txt  README.md
2D_SLAM/data/Train/MapUtils/pybind_cpp/src/: map_utils_py.cpp
2D_SLAM/src/: MapUtils.py  SLAM.py  TextureMap.py  load_data.py  utils.py
HMM-Gesture Recognition/: Classification.py  README.md  hmm.py  readinData.py  training.py  utils.py
HMM-Gesture Recognition/hmm_test_res/: README.md
HMM-Gesture Recognition/hmm_trained_models/: README.md  kmeans_mod.pkl  trained_beat3.pkl  trained_beat4.pkl  trained_circle.pkl  trained_eight.pkl  trained_inf.pkl  trained_wave.pkl
HMM-Gesture Recognition/test_multiple/: README.md  test1.txt  test10.txt  test11.txt  test12.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
HMM-Gesture Recognition/test_single/: README.md  test1.txt  test11.txt  test3.txt  test4.txt  test7.txt  test8.txt
HMM-Gesture Recognition/train/: beat3_01.txt  beat3_02.txt  beat3_03.txt  beat3_06.txt  beat3_08.txt  beat3_32.txt  beat4_01.txt  beat4_03.txt  beat4_05.txt  beat4_08.txt  beat4_09.txt  beat4_31.txt  beat4_32.txt  circle12.txt  circle13.txt  circle14.txt  circle17.txt  circle18.txt  circle31.txt  circle32.txt  eight01.txt  eight02.txt  eight04.txt  eight07.txt  eight08.txt  inf11.txt  inf112.txt  inf13.txt  inf16.txt  inf18.txt  inf31.txt  wave01.txt  wave02.txt  wave03.txt  wave05.txt  (+3 more)
Reinforcement_Learning/: README.md
Unscented_Kalman_Filter/: README.md
object_detection_GMM/: README.md
(+71 files in other folders)
